--- a/MyTaiwanStock/MyTaiwanStock.entitlements
+++ b/MyTaiwanStock/MyTaiwanStock.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.albertkingdom.mytaiwanstock.test</string>
+		<string>group.a2006mike.myTaiwanStock</string>
 	</array>
 </dict>
 </plist>
